<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLay0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    android:orientation="vertical">
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/display_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:background="@color/primary_light">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="right"
            android:cursorVisible="true"
            android:textColorHint="@color/icons"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/zero"
            android:textColor="@color/primary_text"
            android:textSize="60sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/display_screen">
    <!--first row-->
    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="69dp">

        <Button
            android:id="@+id/mc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/mc" />
        <Button
            android:id="@+id/mr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/mr" />
        <Button
            android:id="@+id/ms"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/ms" />
        <Button
            android:id="@+id/m_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/m_plus" />
        <Button
            android:id="@+id/m_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/m_minus" />
    </LinearLayout>
    <!--second row-->
    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="69dp"
        android:layout_below="@+id/first_row">
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:padding="3dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/back"/>
        <Button
            android:id="@+id/ce"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/ce" />
        <Button
            android:id="@+id/c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/c" />
        <Button
            android:id="@+id/plus_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/plus_minus" />
        <Button
            android:id="@+id/square_root"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/square_root" />
    </LinearLayout>
    <!--third row-->
    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="69dp"
        android:layout_below="@+id/second_row">
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/primary"
            android:text="@string/seven" />
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/eight" />
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/nine" />
        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/divide"/>
        <Button
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/percent"/>
    </LinearLayout>
    <!--fourth row-->
    <LinearLayout
        android:id="@+id/fourth_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="69dp"
        android:layout_below="@+id/third_row">
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/primary"
            android:text="@string/four" />
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/five" />
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/six" />
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/multiply"/>
        <Button
            android:id="@+id/inverse_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/inverse_number"/>
    </LinearLayout>
    <!--fifth row-->
    <LinearLayout
        android:id="@+id/fifth_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="69dp"
        android:paddingRight="77dp"
        android:layout_below="@+id/fourth_row">
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/primary"
            android:text="@string/one" />
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/two" />
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/three" />
        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/minus" />

    </LinearLayout>
    <!--sixth row-->
    <LinearLayout
        android:id="@+id/sixth_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="69dp"
        android:paddingRight="77dp"
        android:layout_below="@+id/fifth_row">

        <Button
            android:id="@+id/zero"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/primary"
            android:padding="8dp"
            android:text="@string/zero"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/comma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/comma" />
        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/plus"/>
    </LinearLayout>



    <Button
        android:id="@+id/equal"
        android:layout_marginRight="1dp"
        android:layout_width="76dp"
        android:layout_height="134dp"
        android:layout_below="@id/fourth_row"
        android:background="@color/primary"
        android:text="@string/equal"
        android:textColor="@color/primary_text"
        android:layout_alignParentRight="true"/>
    </RelativeLayout>
    </RelativeLayout>

</LinearLayout>